# fundamentos_spark

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh  requirements.txt
.devcontainer/conf/: log4j2.properties
.devcontainer/spark-events/: app-20241118171941-0000  app-20241118173805-0001  app-20241118174446-0002
Files/: device_part_1.json  device_part_2.json  device_part_3.json
fundamentos_spark/: main.py
tests/: test_main.py
