[tool.poetry]
name = "fundamentos-spark"
version = "0.1.0"
description = "Projeto PySpark com Docker"
authors = ["Mariangela Medeiros Crispim Araujo <mmcrispim@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
taskipy = "^1.13.0"
isort = "^5.13.2"
pyspark = "^3.3.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.40"
mkdocstrings-python = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=curso_fundamentos_spark -vv"
post_test = "coverage html"
run-script = "python ./fundamentos_spark/main.py"
